--- a/settings.ini
+++ b/settings.ini
@@ -1,18 +1,18 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
+lib_name = LIB_NAME
 # For Enterprise Git add variable repo_name and company name
 # repo_name = analytics
 # company_name = nike
 
-user = {user}
+user = USER
 # description = A description of your project
 # keywords = some keywords
-author = {author}
-author_email = {author_email}
+author = AUTHOR
+author_email = AUTHOR_EMAIL
 # copyright = Put your copyright information here
-branch = {branch}
+branch = master 
 version = 0.0.1
 min_python = 3.6
 audience = Developers
