added configuration script

--- a/settings.ini
+++ b/settings.ini
@@ -7,11 +7,11 @@ lib_name = LIB_NAME
 # company_name = nike
 
 user = USER
-# description = A description of your project
-# keywords = some keywords
+description = A description of your project
+keywords = some keywords
 author = AUTHOR
 author_email = AUTHOR_EMAIL
-# copyright = Put your copyright information here
+copyright = AUTHOR
 branch = master 
 version = 0.0.1
 min_python = 3.6
